<resources>
    <string name="app_name">Chotta Bheem</string>
    <string name="FACEBOOK_APP_ID">580483265681896</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">35be1302d0f03ddbb16102e547fa1f25</string>


    // if your Facebook App ID is 1234567, you should use ak1234567
    <string name="ak_login_protocol_scheme">ak35be1302d0f03ddbb16102e547fa1f25</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="loginContent">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="homeTitle">Home</string>
    <string name="profileTitle">Profile</string>
    <string name="admin_requestTitle">Admin Request</string>
    <string name="terms_and_conditionsTitle">Terms and Conditions</string>
    <string name="privacy_policyTitle">Privacy Policy</string>
    <string name="contact_usTitle">Contact Us</string>
    <string name="about_usTitle">About Us</string>
    <string name="share_referral_codeTitle">Share Referral Code</string>
    <string name="setting_Title">Setting</string>
    <string name="add_admin_request_Title">Add Request</string>
    <string name="exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="copyRightsStr">&#169; Copyrights Aadhavan Associates, Pvt ltd</string>

    <array name="menuArray">
        <item>Mobile \n Recharge</item>
        <!-- <item>Bus \n Booking</item>
        <item>Movie \n Ticket</item>-->
        <item>DTH \n Recharge</item>
        <item>Data card \n Recharge</item>
        <item>Postpaid \n Recharge</item>
        <item>Electricity \n Bill</item>
        <item>Gas Bill</item>
        <item>Insurance</item>
        <item>Landline</item>
        <item>Broadband</item>
    </array>

    <array name="hintArray">
        <item>Enter phone number</item>
        <!-- <item>Bus \n Booking</item>
        <item>Movie \n Ticket</item>-->
        <item>Enter DTH id</item>
        <item>Enter number</item>
        <item>Enter phone number</item>
        <item>Account number</item>
        <item>Consumer no</item>
        <item>Policy Number</item>
        <item>Landline Number</item>
        <item>Directory Number</item>
    </array>
    <array name="operatorArry">
        <item>----</item>
        <item>AirTel</item>
        <item>Vodafone</item>
        <item>BSNL</item>
        <item>Jio</item>
        <item>Idea</item>
    </array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="termsCondition">By Signing up, you agree to Chotta Bheem\'s Terms &amp; Conditions and Privacy policy</string>
    <string name="agreeCheckBoxStr">I Agree the Terms and Conditions</string>
    <string name="subscriptionCheckBoxStr">I Agree to pay subscription changes of Rs.99</string>
    <string-array name="circleNameArray">
        <item>Delhi/NCR</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Maharashtra</item>
        <item>Andhra Pradesh</item>
        <item>Tamil Nadu</item>
        <item>Karnataka</item>
        <item>Gujarat</item>
        <item>Uttar Pradesh (E)</item>
        <item>Madhya Pradesh</item>
        <item>Uttar Pradesh (W)</item>
        <item>West Bengal</item>
        <item>Rajasthan</item>
        <item>Kerala</item>
        <item>Punjab</item>
        <item>Haryana</item>
        <item>Bihar &amp; Jharkhand</item>
        <item>Orissa</item>
        <item>Assam</item>
        <item>North East</item>
        <item>Himachal Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Chennai</item>
    </string-array>
    <integer-array name="circleCodeArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </integer-array>

    <string-array name="dthOperatorNameArray">
        <item>VIDEOCON DTH</item>
        <item>SUN DTH</item>
        <item>BIG TV DTH</item>
        <item>TATA SKY DTH</item>
        <item>AIRTEL DTH</item>
        <item>DISH DTH</item>
    </string-array>

    <integer-array name="dthOperatorIdArray">
        <item>28</item>
        <item>26</item>
        <item>24</item>
        <item>27</item>
        <item>23</item>
        <item>25</item>
    </integer-array>


    <string-array name="postpaidNameArray">
        <item> Vodafone</item>
        <item>Airtel</item>
        <item>Bsnl</item>
        <item>Idea</item>
        <item>Loop</item>
        <item>Reliance CDMA</item>
        <item>Reliance GSM</item>
        <item>Tata Docomo GSM</item>
        <item>Tata Indicom</item>
        <item>Tata Walky</item>
        <item>Aircel</item>
        <item>MTS</item>
    </string-array>

    <integer-array name="postpaidIdArray">
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
    </integer-array>

    <string-array name="landlineNameArray">
        <item>RELIANCE INFOCOM LANDLINE</item>
        <item>TIKONA INTERNET LANDLINE</item>
        <item>AIRTEL LANDLINE</item>
        <item>BSNL LANDLINE</item>
        <item>TATA DOCOMO CDMA LANDLINE</item>
        <item>MTNL DELHI</item>
    </string-array>

    <integer-array name="landlineIdArray">
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
    </integer-array>

    <string-array name="browse_plans_key">
        <item>SPL</item>
        <item>DATA</item>
        <item>FTT</item>
        <item>TUP</item>
        <item>RMG</item>
    </string-array>

    <string-array name="browse_plans_titles">
        <item>Special Offers</item>
        <item>Data Plans</item>
        <item>Full Talk Time</item>
        <item>Top-Up</item>
        <item>Roaming</item>
    </string-array>

     <string name="Rs">\u20B9 1000</string> <!--//rupee symbol:-->
</resources>
